hphp/hack/test/typecheck/readonly/readonly_incr_decr.php.exp
ERROR: File "readonly_incr_decr.php", line 8, characters 3-13:
This expression is readonly, its members cannot be modified (Parsing[1002])
ERROR: File "readonly_incr_decr.php", line 9, characters 3-13:
This expression is readonly, its members cannot be modified (Parsing[1002])
ERROR: File "readonly_incr_decr.php", line 10, characters 3-13:
This expression is readonly, its members cannot be modified (Parsing[1002])
ERROR: File "readonly_incr_decr.php", line 11, characters 3-13:
This expression is readonly, its members cannot be modified (Parsing[1002])
